parent can redeem credits and view open sessions
# Conflicts:
#	src/main/java/org/tutortoise/service/session/SessionRepository.java